[gd_scene load_steps=57 format=3 uid="uid://bd2kcieo5qwgl"]

[ext_resource type="Script" path="res://world/check_1_super_man/super_man/superman.gd" id="1_pwvgl"]
[ext_resource type="Shader" path="res://world/check_1_super_man/super_man/flash.gdshader" id="2_8q0a2"]
[ext_resource type="Script" path="res://world/check_1_super_man/super_man/Head.gd" id="2_gxlot"]
[ext_resource type="Texture2D" uid="uid://derwoni8cmuvi" path="res://asset/2D RPG/Character/Idle/Idle-Sheet.png" id="3_tqurl"]
[ext_resource type="Texture2D" uid="uid://bcm2x2lwe8civ" path="res://asset/misc/particle/magic_05.png" id="4_5nrsd"]
[ext_resource type="Texture2D" uid="uid://c3o6jvk4qljj7" path="res://asset/2D RPG/Character/Attack-01/Attack-01-Sheet.png" id="5_linma"]
[ext_resource type="Texture2D" uid="uid://dp7l27y7k4eor" path="res://asset/2D RPG/Character/Dead/Dead-Sheet.png" id="6_vm2v3"]
[ext_resource type="Texture2D" uid="uid://c3rydaywsn0yk" path="res://asset/2D RPG/Character/Jumlp-All/Jump-All-Sheet.png" id="7_rs6co"]
[ext_resource type="Texture2D" uid="uid://3hsmo7jm1dwh" path="res://asset/2D RPG/Character/Jump-Start/Jump-Start-Sheet.png" id="8_xrr1n"]
[ext_resource type="Texture2D" uid="uid://b1vff44n1cdui" path="res://asset/2D RPG/Character/Jump-End/Jump-End-Sheet.png" id="9_okd7s"]
[ext_resource type="Texture2D" uid="uid://dk54hkt3ardtg" path="res://asset/2D RPG/Character/Run/Run-Sheet.png" id="10_p616w"]
[ext_resource type="Script" path="res://misc/custom_node_script/hurt_box.gd" id="11_k5nh1"]
[ext_resource type="Script" path="res://misc/custom_component/state_machine/state_machine.gd" id="12_qvh5u"]
[ext_resource type="Script" path="res://world/check_1_super_man/super_man/super_man_state/show.gd" id="13_nsrkl"]
[ext_resource type="Script" path="res://world/check_1_super_man/super_man/super_man_state/idle.gd" id="14_r34s1"]
[ext_resource type="Script" path="res://world/check_1_super_man/super_man/super_man_state/walk.gd" id="15_mw2we"]
[ext_resource type="Script" path="res://world/check_1_super_man/super_man/super_man_state/fall.gd" id="16_ew2gl"]
[ext_resource type="Script" path="res://world/check_1_super_man/super_man/super_man_state/jump.gd" id="17_i0k6c"]
[ext_resource type="Script" path="res://world/check_1_super_man/super_man/super_man_state/hit.gd" id="20_gghgp"]
[ext_resource type="Script" path="res://world/check_1_super_man/super_man/super_man_state/dash.gd" id="21_db4bv"]
[ext_resource type="Script" path="res://world/check_1_super_man/super_man/super_man_state/die.gd" id="21_vchwp"]
[ext_resource type="Script" path="res://world/check_1_super_man/super_man/super_man_state/dead_recover.gd" id="22_0jm7h"]
[ext_resource type="Script" path="res://misc/custom_node_script/hit_box.gd" id="23_mbq4f"]
[ext_resource type="Script" path="res://misc/custom_node_script/health_manager.gd" id="24_hbj8q"]
[ext_resource type="PackedScene" uid="uid://dykneo2waob8j" path="res://ui/ridicule_word/ridicule.tscn" id="25_wbl2q"]
[ext_resource type="Script" path="res://world/check_1_super_man/super_man/RecoverInvincible.gd" id="26_o1l0n"]

[sub_resource type="Gradient" id="Gradient_ft8rn"]
offsets = PackedFloat32Array(0, 0.325282, 1)
colors = PackedColorArray(1, 1, 0.713726, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_86133"]
gradient = SubResource("Gradient_ft8rn")

[sub_resource type="Curve" id="Curve_5pgl6"]
max_value = 100.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 100), 198.259, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_4kiov"]
curve = SubResource("Curve_5pgl6")

[sub_resource type="Curve" id="Curve_28ajr"]
_data = [Vector2(1e-05, 0), 0.0, 0.0, 0, 0, Vector2(0.0366492, 0.82948), 1.58707, 1.58707, 0, 0, Vector2(0.206186, 0.940337), -0.658554, -0.658554, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_c7q4n"]
curve = SubResource("Curve_28ajr")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fqfa6"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(20, 8, 1)
angle_min = -180.0
angle_max = 180.0
spread = 90.0
flatness = 0.5
initial_velocity_min = 120.0
initial_velocity_max = 160.0
gravity = Vector3(2.08165e-12, 98, 2.08165e-12)
damping_min = 15.0
damping_max = 20.0
damping_curve = SubResource("CurveTexture_4kiov")
scale_min = 0.5
scale_max = 1.2
scale_curve = SubResource("CurveTexture_c7q4n")
color_ramp = SubResource("GradientTexture1D_86133")
hue_variation_min = -0.01
sub_emitter_mode = 1
sub_emitter_frequency = 4.0
sub_emitter_keep_velocity = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_biuql"]
shader = ExtResource("2_8q0a2")
shader_parameter/if_work = false

[sub_resource type="Curve" id="Curve_kkscb"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.16129, 0.879579), 1.56027, 1.56027, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_cs2w1"]
curve = SubResource("Curve_kkscb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tr45e"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 10, 1)
direction = Vector3(-1, 2.08165e-12, 2.08165e-12)
spread = 15.0
initial_velocity_min = 100.0
initial_velocity_max = 200.0
angular_velocity_min = 20.0
angular_velocity_max = 100.0
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
damping_min = 100.0
damping_max = 200.0
scale_min = 0.7
scale_max = 1.2
scale_curve = SubResource("CurveTexture_cs2w1")

[sub_resource type="Animation" id="Animation_10vv0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_tqurl")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HurtBox/CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, -37)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerSprite:material:shader_parameter/if_work")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("..:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nwgry"]
resource_name = "attack"
length = 0.85
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_linma")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.09, 0.19, 0.51, 0.63),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HurtBox/CollisionShape2D:position")
tracks/4/interp = 0
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(11, -37), Vector2(3, -22)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerSprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}

[sub_resource type="Animation" id="Animation_rjf2l"]
resource_name = "dash"

[sub_resource type="Animation" id="Animation_qbibf"]
resource_name = "die"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_vm2v3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, -16)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_8hv14"]
resource_name = "fall"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_rs6co")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -32)]
}

[sub_resource type="Animation" id="Animation_ondbj"]
resource_name = "hit"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:material:shader_parameter/if_work")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.475, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_ne116"]
resource_name = "idle"
length = 0.48
loop_mode = 1
step = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_tqurl")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}

[sub_resource type="Animation" id="Animation_uxp34"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_xrr1n")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.025, 0.075, 0.175),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_0khvg"]
resource_name = "land"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_okd7s")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -32)]
}

[sub_resource type="Animation" id="Animation_8064h"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_78x00"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_p616w")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_36nh7"]
_data = {
"RESET": SubResource("Animation_10vv0"),
"attack": SubResource("Animation_nwgry"),
"dash": SubResource("Animation_rjf2l"),
"die": SubResource("Animation_qbibf"),
"fall": SubResource("Animation_8hv14"),
"hit": SubResource("Animation_ondbj"),
"idle": SubResource("Animation_ne116"),
"jump": SubResource("Animation_uxp34"),
"land": SubResource("Animation_0khvg"),
"show": SubResource("Animation_8064h"),
"walk": SubResource("Animation_78x00")
}

[sub_resource type="Gradient" id="Gradient_jvt5j"]
colors = PackedColorArray(0.99725, 1, 0.959228, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0tsvu"]
gradient = SubResource("Gradient_jvt5j")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_upuru"]
radius = 32.0156

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7tnum"]
radius = 8.0
height = 34.0

[sub_resource type="Animation" id="Animation_y3ln0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8wydw"]
resource_name = "recover"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.223529)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y2d04"]
_data = {
"RESET": SubResource("Animation_y3ln0"),
"recover": SubResource("Animation_8wydw")
}

[node name="SuperMan" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
platform_on_leave = 1
script = ExtResource("1_pwvgl")

[node name="PlayerCollision" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(0, -21)
polygon = PackedVector2Array(0, 21, 3, 18, 7, 5, 4, -12, -4, -12, -7, 5, -3, 18)

[node name="HeadPositionMarker" type="Node2D" parent="."]
position = Vector2(0, -41)

[node name="Head" type="Sprite2D" parent="HeadPositionMarker"]
script = ExtResource("2_gxlot")

[node name="ColorRect" type="ColorRect" parent="HeadPositionMarker/Head"]
offset_right = 40.0
offset_bottom = 2.0

[node name="AttackParticle" type="GPUParticles2D" parent="HeadPositionMarker/Head"]
rotation = 0.261799
emitting = false
amount = 120
process_material = SubResource("ParticleProcessMaterial_fqfa6")
texture = ExtResource("4_5nrsd")
lifetime = 1.5
randomness = 0.5
fixed_fps = 120

[node name="AttackTimer" type="Timer" parent="HeadPositionMarker/Head"]

[node name="Graphic" type="Node2D" parent="."]

[node name="PlayerSprite" type="Sprite2D" parent="Graphic"]
light_mask = 0
material = SubResource("ShaderMaterial_biuql")
position = Vector2(0, -24)
texture = ExtResource("3_tqurl")
hframes = 4

[node name="DashParticle" type="GPUParticles2D" parent="Graphic/PlayerSprite"]
amount = 50
process_material = SubResource("ParticleProcessMaterial_tr45e")
texture = ExtResource("4_5nrsd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphic"]
libraries = {
"": SubResource("AnimationLibrary_36nh7")
}

[node name="DetectWallRay" type="RayCast2D" parent="Graphic"]
position = Vector2(0, -20)
target_position = Vector2(16, 0)

[node name="FallDetecteEnemyRay" type="RayCast2D" parent="Graphic"]
position = Vector2(0, -20)
target_position = Vector2(0, 24)
collision_mask = 4

[node name="PointLight2D" type="PointLight2D" parent="Graphic"]
light_mask = 0
position = Vector2(0, -21)
energy = 0.5
shadow_color = Color(0, 0, 0, 1)
shadow_filter = 1
shadow_filter_smooth = 64.0
texture = SubResource("GradientTexture2D_0tsvu")
texture_scale = 2.0

[node name="HurtBox" type="Area2D" parent="Graphic"]
visible = false
collision_layer = 8
collision_mask = 0
script = ExtResource("11_k5nh1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphic/HurtBox"]
position = Vector2(11, -37)
shape = SubResource("CircleShape2D_upuru")
disabled = true

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("animation_player", "character")]
process_mode = 3
script = ExtResource("12_qvh5u")
animation_player = NodePath("../Graphic/AnimationPlayer")
character = NodePath("..")
debug = true

[node name="show" type="Node" parent="state_machine"]
script = ExtResource("13_nsrkl")
state_name = "show"

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource("14_r34s1")
state_name = "idle"

[node name="walk" type="Node" parent="state_machine"]
script = ExtResource("15_mw2we")
acceleration = 7.0
max_speed = 160.0

[node name="fall" type="Node" parent="state_machine"]
script = ExtResource("16_ew2gl")
state_name = "fall"
acceleration = 6.0
max_speed = 160.0

[node name="PreInputJumpTimer" type="Timer" parent="state_machine/fall"]
wait_time = 0.15
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="state_machine/fall"]
wait_time = 0.1
one_shot = true

[node name="jump" type="Node" parent="state_machine"]
script = ExtResource("17_i0k6c")
jump_frames = 2
jump_acceleration_y = 700.0
jump_velocity_y = -400.0
random_talk = Array[String](["起飞", "诶 飞～", "我蹦"])
state_name = "jump"
acceleration = 6.0
max_speed = 160.0

[node name="hit" type="Node" parent="state_machine" node_paths=PackedStringArray("hit_collision")]
script = ExtResource("20_gghgp")
all_hit_frames = 8
hit_acceleration = 100.0
hit_velocity = 300.0
hit_collision = NodePath("../../Component/HitBox/CollisionShape2D")
state_name = "hit"
acceleration = 1.0
max_speed = 150.0

[node name="die" type="Node" parent="state_machine" node_paths=PackedStringArray("hit_collision")]
script = ExtResource("21_vchwp")
hit_collision = NodePath("../../Component/HitBox/CollisionShape2D")
state_name = "die"
acceleration = 5.0
max_speed = 160.0

[node name="recover" type="Node" parent="state_machine"]
script = ExtResource("22_0jm7h")
state_name = "recover"

[node name="dash" type="Node" parent="state_machine"]
script = ExtResource("21_db4bv")
dash_time = 0.3
state_name = "dash"
acceleration = 15.0
max_speed = 300.0

[node name="DashTimer" type="Timer" parent="state_machine/dash"]
one_shot = true

[node name="Component" type="Node2D" parent="."]

[node name="HitBox" type="Area2D" parent="Component" node_paths=PackedStringArray("health_component")]
collision_layer = 0
collision_mask = 16
script = ExtResource("23_mbq4f")
health_component = NodePath("../HealthManager")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Component/HitBox"]
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_7tnum")

[node name="HealthManager" type="Node" parent="Component"]
script = ExtResource("24_hbj8q")
max_health = 4.0

[node name="Ridicule" parent="Component" instance=ExtResource("25_wbl2q")]
position = Vector2(0, -60)

[node name="RecoverInvincible" type="Node2D" parent="Component"]
script = ExtResource("26_o1l0n")

[node name="RecoverTimer" type="Timer" parent="Component/RecoverInvincible"]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Component/RecoverInvincible"]
libraries = {
"": SubResource("AnimationLibrary_y2d04")
}

[connection signal="attack" from="." to="HeadPositionMarker/Head" method="_on_super_man_attack"]
[connection signal="timeout" from="HeadPositionMarker/Head/AttackTimer" to="HeadPositionMarker/Head" method="_on_attack_timer_timeout"]
[connection signal="hurt" from="Graphic/HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="die_animation_finished" from="state_machine/die" to="." method="_on_dead"]
[connection signal="timeout" from="state_machine/dash/DashTimer" to="state_machine/dash" method="_on_dash_timer_timeout"]
[connection signal="be_hit" from="Component/HitBox" to="." method="_on_hit_box_be_hit"]
[connection signal="die" from="Component/HealthManager" to="." method="_on_health_manager_die"]
[connection signal="timeout" from="Component/RecoverInvincible/RecoverTimer" to="Component/RecoverInvincible" method="_on_recover_timer_timeout"]
